adjusted and fixed flex wrap

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=IBM+Plex+Sans+Condensed:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@1,300&display=swap');
 
 body {
     display: flex;
@@ -6,8 +7,6 @@ body {
     flex-direction: column;
     height: 100vh;
     margin: 0;
-    padding: 0;
-    flex-wrap: wrap;
     font-family: 'IBM Plex Sans', sans-serif;
 }
 
@@ -63,27 +62,57 @@ body {
 }
 
 .text-container {
+    text-align: center;
     width: 400px;
-    height: 300px;
+    height: 400px;
     display: flex;
     flex-direction: column;
     flex: 1;
     flex-wrap: wrap;
+    min-width: 200px;
 }
 
 .button-container {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 30px;
+    gap: 15px;
+}
 
+a {
+    text-decoration: none;
+    border: solid 2px red;
+    border-radius: 45px;
+    width: 100px;
+    background-color: white;
+    padding: 30px;
 }
 
 img {
+    display: flex;
+    flex-wrap: wrap;
     width: 600px;
     height: 300px;
     border-radius: 18px;
 }
 
+.image-placeholder {
+    align-self: center;
+    justify-content: center;
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+}
+
 .four-image-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
     background-color: blueviolet;
 }
 
@@ -115,4 +144,27 @@ figcaption {
     flex-wrap: wrap;
     width: 200px;
     border: solid 2px blue;
+}
+
+.quote-container {
+    background-color: bisque;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.quote-wrapper {
+    width: 500px;
+    padding: 50px;
+}
+
+.quote {
+    font-family: 'Bitter', serif;
+    font-style: italic;
+    text-align: center;
+}
+
+
+.quote-sayer {
+    text-align:end;
 }
